--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "python-template"
 version = "0.1.0"
 description = ""
-authors = [" MR DAXX"]
+authors = ["ᴅᴇᴠɪʟ~ᴏᴘ™"]
 
 [tool.poetry.dependencies]
 python = ">=3.8.0,<3.9"
